--- a/src/index.css
+++ b/src/index.css
@@ -2,109 +2,109 @@
 
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-Black.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-BlackItalic.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-BlackItalic.ttf') format('truetype');
   font-weight: 900;
   font-style: italic;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-Bold.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-BoldItalic.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-ExtraBold.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-ExtraBold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-ExtraBoldItalic.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-ExtraBoldItalic.ttf') format('truetype');
   font-weight: 800;
   font-style: italic;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-ExtraLight.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-ExtraLight.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-ExtraLightItalic.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-ExtraLightItalic.ttf') format('truetype');
   font-weight: 200;
   font-style: italic;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-Italic.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-Italic.ttf') format('truetype');
   font-weight: 400;
   font-style: italic;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-Light.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-LightItalic.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-LightItalic.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-Medium.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-MediumItalic.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-MediumItalic.ttf') format('truetype');
   font-weight: 500;
   font-style: italic;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-Regular.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-SemiBold.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-SemiBoldItalic.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-SemiBoldItalic.ttf') format('truetype');
   font-weight: 600;
   font-style: italic;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-Thin.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-Thin.ttf') format('truetype');
   font-weight: 100;
   font-style: normal;
 }
 @font-face {
   font-family: 'Urbanist';
-  src: url('./assets/fonts/Urbanist-ThinItalic.ttf') format('truetype');
+  src: url('/public/fonts/Urbanist-ThinItalic.ttf') format('truetype');
   font-weight: 100;
   font-style: italic;
 }
